# MTEF-py-FIX

./: .gitignore  CHANGELOG.md  LICENSE  NOTICE  README.md  README_EN.md  pyproject.toml
examples/: parse_mtef.py
src/mtef_py/: __init__.py  __main__.py  chars.py  mtef.py
tests/: test_parallel.py
tests/data/: parallel.mtef
